--- a/workspaces/backend/.env.example
+++ b/workspaces/backend/.env.example
@@ -1,2 +1,2 @@
-MONGODB_URI_TEST=
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://<username>:<password>@<connection_url>
+MONGODB_URI_TEST=mongodb+srv://<username>:<password>@<connection_url>
